<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MaterielActivity">

    <Button
        android:id="@+id/ViewIntro"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/bg_primary_grad"
        android:drawableStart="@drawable/ic_material_small"
        android:fontFamily="@font/poppins_regular"
        android:paddingStart="4dp"
        android:text="@string/materiel"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry"
        tools:layout_editor_absoluteX="20dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/ViewIntro">
        <androidx.cardview.widget.CardView
            android:id="@+id/btnMateriel1"
            android:layout_width="match_parent"
            android:layout_marginVertical="8dp"
            app:cardCornerRadius="15dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:paddingVertical="16dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:text="1"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:padding="12dp"
                    android:background="@drawable/bg_red_ligth"
                    android:textColor="@color/red" />
                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/materiel1"
                    android:textSize="18dp"
                    android:fontFamily="@font/poppins_bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btnMateriel2"
            android:layout_width="match_parent"
            android:layout_marginVertical="8dp"
            app:cardCornerRadius="15dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:paddingVertical="16dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:text="2"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:padding="12dp"
                    android:background="@drawable/bg_red_ligth"
                    android:textColor="@color/red" />
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/materiel2"
                    android:textSize="18dp"
                    android:fontFamily="@font/poppins_bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btnMateriel3"
            android:layout_width="match_parent"
            android:layout_marginVertical="8dp"
            app:cardCornerRadius="15dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:paddingVertical="16dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:text="3"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:padding="12dp"
                    android:background="@drawable/bg_red_ligth"
                    android:textColor="@color/red" />
                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/materiel3"
                    android:textSize="18dp"
                    android:fontFamily="@font/poppins_bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>