<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".IntroductionActivity"
    android:layout_width="match_parent"
    android:background="@color/gray"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <Button
        android:id="@+id/ViewIntro"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/bg_primary_grad"
        android:drawableStart="@drawable/ic_introduction_med"
        android:fontFamily="@font/poppins_regular"
        android:paddingStart="4dp"
        android:text="@string/introduction"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry"
        tools:layout_editor_absoluteX="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/ViewIntro">
        <androidx.cardview.widget.CardView
            android:id="@+id/btnLintro"
            android:layout_width="match_parent"
            android:layout_marginVertical="8dp"
            app:cardCornerRadius="15dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:paddingVertical="16dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_baseline_info_24"
                    android:padding="12dp"
                    android:background="@drawable/bg_red_ligth"
                    app:tint="@color/red" />
                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginHorizontal="16dp"
                    android:text="L'introduction"
                    android:textSize="18dp"
                    android:fontFamily="@font/poppins_bold"/>
                <ImageView
                    android:id="@+id/arrowLintro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="8dp"
                    android:layout_marginHorizontal="8dp"
                    android:background="@drawable/bg_primary_ligth"
                    android:src="@drawable/ic_down"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/textLintro"
            android:layout_width="match_parent"
            android:layout_marginVertical="8dp"
            app:cardCornerRadius="10dp"
            android:visibility="gone"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:paddingVertical="16dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvLintro"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/l_introduction"
                    android:justificationMode="inter_word"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_regular"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/btnLobjek"
            android:layout_width="match_parent"
            android:layout_marginVertical="8dp"
            app:cardCornerRadius="15dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:paddingVertical="16dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_baseline_library_books_24"
                    android:padding="12dp"
                    android:background="@drawable/bg_red_ligth"
                    app:tint="@color/red" />
                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginHorizontal="16dp"
                    android:text="L'objectif"
                    android:textSize="18dp"
                    android:fontFamily="@font/poppins_bold"/>
                <ImageView
                    android:id="@+id/arrowLobjek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="8dp"
                    android:layout_marginHorizontal="8dp"
                    android:background="@drawable/bg_primary_ligth"
                    android:src="@drawable/ic_down"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/textLobjek"
            android:layout_width="match_parent"
            android:layout_marginVertical="8dp"
            app:cardCornerRadius="10dp"
            android:visibility="gone"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:paddingVertical="16dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvLobjek"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/l_objek"
                    android:justificationMode="inter_word"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_regular"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/btnLmateri"
            android:layout_width="match_parent"
            android:layout_marginVertical="8dp"
            app:cardCornerRadius="15dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:paddingVertical="16dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_baseline_book_24"
                    android:padding="12dp"
                    android:background="@drawable/bg_red_ligth"
                    app:tint="@color/red" />
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginHorizontal="16dp"
                    android:text="Le Matériel"
                    android:textSize="18dp"
                    android:fontFamily="@font/poppins_bold"/>
                <ImageView
                    android:id="@+id/arrowLmateriel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="8dp"
                    android:layout_marginHorizontal="8dp"
                    android:background="@drawable/bg_primary_ligth"
                    android:src="@drawable/ic_down"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/textLmateriel"
            android:layout_width="match_parent"
            android:layout_marginVertical="8dp"
            app:cardCornerRadius="10dp"
            android:visibility="gone"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:paddingVertical="16dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvLmateriel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/l_materiel"
                    android:justificationMode="inter_word"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_regular"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>